--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body ng-controller="WebTorrentCtrl" ng-cloak="">
 <header>
-  <h1>βTorrent<span class="version"> v{{$root.version}}</span></h1>
+  <h1>WebTorrent<span class="version"> v 0.3.0</span></h1>
   <div class="views" ng-show="$root.client.torrents.length == 0"><a ng-href="/#">Full</a> | <a ng-href="/download">Single Download</a> | <a ng-href="/view">Stream / View</a></div>
   <div class="aligncenter" style="width: 468px; display: inline-block;">
   </div>
